<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">VeritransSdk</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_email">Email</string>
    <string name="next">Next</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="validation_full_name_empty">Please enter full name</string>
    <string name="validation_email_empty">Please enter email</string>
    <string name="validation_email_invalid">Please enter valid email</string>
    <string name="validation_phone_no_empty">Please enter phone number.</string>
    <string name="validation_phone_no_invalid">Please enter valid phone number</string>
    <string name="my_credit_card">My Credit Card</string>
    <string name="description_btn_bbm">BBM Button</string>
    <string name="description_mandiri_token_instruction">Mandiri Token Instruction</string>
    <string name="description_payment_method_cover">Payment Method List</string>
    <string name="description_dialog_title">Dialog title image</string>
    <string name="description_help_icon">Show help</string>
    <string name="description_transaction_status">Transaction status</string>
    <string name="description_delete_card">Delete card</string>
    <string name="description_question_mark">Question Mark</string>
    <string name="description_google_play">Get on Google Play</string>
    <string name="description_minus_button">Minus</string>
    <string name="description_plus_button">Plus</string>
    <string name="description_success_transaction">Success</string>
    <string name="description_arrow">Arrow</string>
    <string name="description_bank_icon">Bank icon</string>
    <string name="description_payment_method_icon">Payment method icon</string>
    <string name="text_payment_type_here">Payment Type here</string>
    <string name="text_transaction_time_here">Transaction Time Here</string>
    <string name="text_sample_card_expiry">XX/12</string>
    <string name="text_billpay_code_here">billpay code here</string>
    <string name="text_sample_masked_credit_card" tools:ignore="Typos">XXXX XXXX XXXX 1234</string>
    <string name="text_company_code_here">company code here</string>
    <string name="text_bank_name">Bank name</string>
    <string name="text_sample_valid_date">Valid Until : 10 September 2015, 16:00</string>
    <string name="text_demo">demo</string>
    <string name="text_demo_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam fringilla nulla vel purus feugiat, ut accumsan sapien faucibus. Nullam sit amet ipsum at ipsum elementum tempus id rutrum odio. Sed fermentum lacus id sapien mollis tincidunt. Sed id elementum ipsum, sit amet ultricies risus. Nulla facilisi. Etiam sit amet tortor vitae elit eleifend molestie eu vitae odio. Etiam ut posuere arcu. Nullam tempus nisl sed metus auctor feugiat at a sapien. Pellentesque dignissim velit commodo, dapibus libero eget, lacinia tellus. Fusce congue posuere erat. Donec facilisis, massa vitae varius ultrices, metus ligula accumsan justo, eu mollis erat diam quis magna. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In a pretium libero, vel bibendum quam. Ut eu lacinia erat. Suspendisse vel lacus sit amet mi placerat feugiat.</string>
    <string name="text_test">test</string>
    <string name="text_input_one_here">Input 1 here</string>
    <string name="text_input_two_here">Input 2 here</string>
    <string name="text_input_three_here">Input 3 here</string>
    <string name="text_three">3</string>
    <string name="text_amount_here">Amount here</string>
    <string name="text_amount">Amount </string>
    <string name="text_order_id_here">Order Id here</string>
    <string name="text_colon">:</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_accept">Accept</string>
    <string name="activity_select_bank">Select Bank</string>
    <string name="activity_bank_transfer_bca">BCA Bank Transfer</string>
    <string name="activity_bank_transfer_mandiri">Mandiri Bank Transfer</string>
    <string name="activity_bank_transfer_permata">Permata Bank Transfer</string>
    <string name="activity_save_credit_card">Registered Credit Card</string>
    <string name="title_user_details">User Details</string>
    <string name="hint_address">Address</string>
    <string name="hint_city">City</string>
    <string name="hint_zip_code">Zipcode</string>
    <string name="hint_country">Country</string>
    <string name="billing_address">Billing Address</string>
    <string name="title_shipping_billing_address"><![CDATA[Shipping & Billing address]]></string>
    <string name="shipping_address">Shipping Address</string>
    <string name="shipping_cb_message">Same as billing address</string>
    <string name="validation_billingaddress_empty">Please enter billing address</string>
    <string name="validation_billingcity_empty">Please enter billing city</string>
    <string name="validation_billingzipcode_empty">Please enter billing zipcode</string>
    <string name="validation_billingcountry_empty">Please enter billing country</string>
    <string name="validation_billingzipcode_invalid">Please enter valid zipcode</string>
    <string name="validation_shippingaddress_empty">Please enter shipping address</string>
    <string name="validation_shippingcity_empty">Please enter shipping address</string>
    <string name="validation_shippingzipcode_empty">Please enter valid shipping zipcode</string>
    <string name="validation_shippingcountry_empty">Please enter shipping country</string>
    <string name="validation_shippingzipcode_invalid">Please enter valid shipping zipcode</string>
    <string name="pay_with">Pay With</string>
    <string name="payable_amount">Payable Amount</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="font_open_sans_regular">open_sans_regular</string>
    <string name="font_open_sans_bold">open_sans_bold</string>
    <string name="font_open_sans_semibold">open_sans_semi_bold</string>
    <string-array name="payment_methods">
        <item>Offers</item>
        <item>Credit/Debit Card</item>
        <item>Mandiri Clickpay</item>

        <item>CIMB Clicks</item>
        <item>ePay BRI</item>
        <item>BBM Money</item>

        <item>Indosat Dompetku</item>
        <item>Mandiri e-Cash</item>
        <item>Bank Transfer</item>
        <item>Mandiri Bill Payment</item>
        <item>Indomaret</item>
    </string-array>
    <string name="hint_name_on_card">Name on the card</string>
    <string name="hint_card_number">Card Number</string>
    <string name="hint_cvv">CVV</string>
    <string name="save_card_message">Save this card for future use</string>
    <string name="pay_now">Pay now</string>
    <string name="pay_with_instalments">Pay with instalments</string>
    <string name="validatation_message_card_holder_name">Please enter card holder name</string>
    <string name="hint_expiry_date">Expiry(mm/yy)</string>
    <string name="validation_message_card_number">Please enter card number</string>
    <string name="validation_message_invalid_card_no">Please enter valid card number</string>
    <string name="validation_message_invalid_token_no">Challenge token must be 6 characters.</string>
    <string name="validation_message_cvv">Please enter CVV.</string>
    <string name="validation_message_invalid_cvv">Please enter valid CVV</string>
    <string name="validation_message_empty_expiry_date">Please enter expiry date</string>
    <string name="message_cvv">CVV is 3 or 4 digit number printed at the back side of the card.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_network">Network unavailable</string>
    <string name="no_network_msg">Network not available! Please try later.</string>
    <string name="ok">OK</string>
    <string name="enter_cvv">Enter CVV</string>
    <string name="valid_thru">Valid Thru</string>
    <string name="zero_month">0 month</string>
    <string name="formatted_month">%1$s months</string>
    <string name="virtual_account">Virtual Account</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="mandiri_bill_payment">Mandiri Bill Payment</string>
    <string name="bca_bank_transfer">BCA</string>
    <string name="permata_bank_transfer">Permata</string>
    <string name="orderId">Order ID</string>
    <string name="amount">Amount</string>
    <string name="transfer_amount">Transfer Amount</string>
    <string name="hint_email_optional">Email Address (Optional)</string>
    <string name="email_instruction">We\'ll send payment instruction to mail.</string>
    <string name="atm_transfer_steps">ATM Transfer step-by-step</string>
    <string name="bank_atm_transfer_step1">1.\t Click the Confirm Payment button.</string>
    <string name="bank_atm_transfer_step2">2.\t You will receive an unique account number and instructions on how to pay
        (You can receive instructions via email if you input your mail address above).</string>
    <string name="bank_atm_transfer_step3">3.\t Please complete payment through the Prima(BCA), ATM Bersama(Mandiri), or Alto(Permata) ATM network.</string>
    <string name="bank_atm_transfer_step4">4.\t Once payment is complete, you will receive a confirmation email.</string>
    <string name="see_instruction">see instructions</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="copy_payment_code">Copy Payment Code</string>
    <string name="copy_va_number">Copy Virtual Account Number</string>
    <string name="copy_billpay_code">Copy Bill Pay Code</string>
    <string name="copy_company_code">Copy Company Code</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="copied_bill_code">Billpay code was copied to clipboard</string>
    <string name="copied_company_code">Company code was copied to clipboard</string>
    <string name="complete_payment_at_atm">Complete Payment At ATM</string>
    <string name="complete_payment_at_klik_bca">Finish</string>
    <string name="done">Done</string>
    <string name="instruction">Instructions</string>
    <string name="bbm_money_instruction_step1">1.\tPlease click \'Confirm Payment\'.</string>
    <string name="bbm_money_instruction_step2">2.\tOpen or install the BBM™ Money app on your
        smartphone.</string>
    <string name="bbm_money_instruction_step3">3.\tMake sure you have enough balance in your BBM™ Money wallet.</string>
    <string name="bbm_money_instruction_step4">4.\tLogin to your BBM™ Money account and select
        \'Send To Company\'.</string>
    <string name="bbm_money_instruction_step5">5.\tSelect \'Online Shopping\' as the biller and
        then enter Payment Code into the \'Payment Code\' field.</string>
    <string name="bbm_money_instruction_step6">6.\tInput amount to be paid into \'Amount\'.</string>
    <string name="get_bbm_money_app">Get BBM Money App</string>
    <string name="permata_instruction_step1">1.\tOn the main menu, Choose \'Other Transaction\'.</string>
    <string name="permata_instruction_step2">2.\tChoose \'Payment\'.</string>
    <string name="permata_instruction_step3">3.\tChoose \'Other Payment\'.</string>
    <string name="permata_instruction_step4">4.\tChoose \'Virtual Account\'.</string>
    <string name="permata_instruction_step5">5.\tEnter 16 digits payment Account No. and press \'Correct\'.</string>
    <string name="permata_instruction_step6">6.\tAmount to be paid, account number, and merchant name will appear on confirmation page. If the confirmation page is right, press \'Correct\'.</string>
    <string name="permata_instruction_step7">7.\tChoose your payment account and press \'Correct\'.</string>
    <string name="company_code">Company Code</string>
    <string name="bill_code">Billpay Code</string>
    <string name="indosat_dompetku">Indosat Dompetku</string>
</resources>