<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/sixteen_dp">


        <id.co.veritrans.sdk.widgets.TextViewFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_four_dp"
            android:text="@string/instruction"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/header_text_size"
            app:font="@string/font_open_sans_regular"
            />

        <id.co.veritrans.sdk.widgets.TextViewFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_four_dp"
            android:text="@string/permata_instruction_step1"
            android:textColor="@color/black"
            android:textSize="@dimen/secondary_text_size"
            app:font="@string/font_open_sans_regular"
            />

        <id.co.veritrans.sdk.widgets.TextViewFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eight_dp"
            android:lineSpacingExtra="2dp"
            android:text="@string/permata_instruction_step2"
            android:textColor="@color/black"
            android:textSize="@dimen/secondary_text_size"
            app:font="@string/font_open_sans_regular"
            />


        <id.co.veritrans.sdk.widgets.TextViewFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eight_dp"
            android:lineSpacingExtra="2dp"
            android:text="@string/permata_instruction_step3"
            android:textColor="@color/black"
            android:textSize="@dimen/secondary_text_size"
            app:font="@string/font_open_sans_regular"
            />


        <id.co.veritrans.sdk.widgets.TextViewFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eight_dp"
            android:lineSpacingExtra="2dp"
            android:text="@string/permata_instruction_step4"
            android:textColor="@color/black"
            android:textSize="@dimen/secondary_text_size"
            app:font="@string/font_open_sans_regular"
            />


        <id.co.veritrans.sdk.widgets.TextViewFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eight_dp"
            android:lineSpacingExtra="2dp"
            android:text="@string/permata_instruction_step5"
            android:textColor="@color/black"
            android:textSize="@dimen/secondary_text_size"
            app:font="@string/font_open_sans_regular"
            />


        <id.co.veritrans.sdk.widgets.TextViewFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eight_dp"
            android:lineSpacingExtra="2dp"
            android:text="@string/permata_instruction_step6"
            android:textColor="@color/black"
            android:textSize="@dimen/secondary_text_size"
            app:font="@string/font_open_sans_regular"
            />


        <id.co.veritrans.sdk.widgets.TextViewFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eight_dp"
            android:lineSpacingExtra="2dp"
            android:text="@string/permata_instruction_step7"
            android:textColor="@color/black"
            android:textSize="@dimen/secondary_text_size"
            app:font="@string/font_open_sans_regular"
            />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>