<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/sixteen_dp"
            android:paddingLeft="@dimen/sixteen_dp"
            android:paddingRight="@dimen/sixteen_dp"
            >

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email_optional"
                android:inputType="textEmailAddress"
                android:maxLength="100"
                android:singleLine="true"
                android:textColorHint="@color/colorAccent"/>
        </android.support.design.widget.TextInputLayout>

        <id.co.veritrans.sdk.widgets.TextViewFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_instruction"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/tertiary_text_size"
            app:font="@string/font_open_sans_regular"
            android:paddingLeft="@dimen/sixteen_dp"
            android:paddingRight="@dimen/sixteen_dp"
            />


        <id.co.veritrans.sdk.widgets.TextViewFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_four_dp"
            android:text="@string/atm_transfer_steps"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/primary_text_size"
            app:font="@string/font_open_sans_regular"
            android:paddingLeft="@dimen/sixteen_dp"
            android:paddingRight="@dimen/sixteen_dp"
            />

        <id.co.veritrans.sdk.widgets.TextViewFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:paddingLeft="@dimen/sixteen_dp"
            android:paddingRight="@dimen/sixteen_dp"
            android:paddingTop="@dimen/five_dp"
            android:paddingBottom="@dimen/five_dp"
            android:text="@string/bank_atm_transfer_step1"
            android:textColor="@color/black"
            android:textSize="@dimen/secondary_text_size"
            app:font="@string/font_open_sans_regular"
            android:background="@color/light_gray"
            />

        <id.co.veritrans.sdk.widgets.TextViewFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eight_dp"
            android:lineSpacingExtra="2dp"
            android:text="@string/bank_atm_transfer_step2"
            android:textColor="@color/black"
            android:textSize="@dimen/secondary_text_size"
            app:font="@string/font_open_sans_regular"
            android:paddingLeft="@dimen/sixteen_dp"
            android:paddingRight="@dimen/sixteen_dp"
            />


        <id.co.veritrans.sdk.widgets.TextViewFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eight_dp"
            android:lineSpacingExtra="2dp"
            android:text="@string/bank_atm_transfer_step3"
            android:textColor="@color/black"
            android:textSize="@dimen/secondary_text_size"
            app:font="@string/font_open_sans_regular"
            android:paddingLeft="@dimen/sixteen_dp"
            android:paddingRight="@dimen/sixteen_dp"
            android:background="@color/light_gray"
            android:paddingTop="@dimen/five_dp"
            android:paddingBottom="@dimen/five_dp"
            />



        <id.co.veritrans.sdk.widgets.TextViewFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eight_dp"
            android:lineSpacingExtra="2dp"
            android:text="@string/bank_atm_transfer_step4"
            android:textColor="@color/black"
            android:textSize="@dimen/secondary_text_size"
            app:font="@string/font_open_sans_regular"
            android:paddingLeft="@dimen/sixteen_dp"
            android:paddingRight="@dimen/sixteen_dp"
            />


        <id.co.veritrans.sdk.widgets.TextViewFont
            android:id="@+id/text_see_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_four_dp"
            android:clickable="true"
            android:paddingBottom="@dimen/eight_dp"
            android:paddingTop="@dimen/eight_dp"
            android:text="@string/see_instruction"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/secondary_text_size"
            app:font="@string/font_open_sans_semibold"
            android:paddingLeft="@dimen/sixteen_dp"
            android:paddingRight="@dimen/sixteen_dp"
            />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>