<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/layout_get_bbm__money_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <id.co.veritrans.sdk.widgets.TextViewFont
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/sixteen_dp"
                android:gravity="center_horizontal"
                android:paddingLeft="@dimen/sixteen_dp"
                android:paddingRight="@dimen/sixteen_dp"
                android:text="@string/get_bbm_money_app"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/twelve_dp"
                app:font="@string/font_open_sans_regular"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/sixteen_dp"
                android:src="@drawable/ic_googleplay"
                />

        </LinearLayout>

        <id.co.veritrans.sdk.widgets.TextViewFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:paddingLeft="@dimen/sixteen_dp"
            android:paddingRight="@dimen/sixteen_dp"
            android:text="@string/instruction"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/primary_text_size"
            app:font="@string/font_open_sans_regular"
            />

        <id.co.veritrans.sdk.widgets.TextViewFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:background="@color/light_gray"
            android:paddingBottom="@dimen/five_dp"
            android:paddingLeft="@dimen/sixteen_dp"
            android:paddingRight="@dimen/sixteen_dp"
            android:paddingTop="@dimen/five_dp"
            android:text="@string/bbm_money_instruction_step1"
            android:textColor="@color/black"
            android:textSize="@dimen/secondary_text_size"
            app:font="@string/font_open_sans_regular"
            />

        <id.co.veritrans.sdk.widgets.TextViewFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eight_dp"
            android:lineSpacingExtra="2dp"
            android:paddingLeft="@dimen/sixteen_dp"
            android:paddingRight="@dimen/sixteen_dp"
            android:text="@string/bbm_money_instruction_step2"
            android:textColor="@color/black"
            android:textSize="@dimen/secondary_text_size"
            app:font="@string/font_open_sans_regular"
            />


        <id.co.veritrans.sdk.widgets.TextViewFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eight_dp"
            android:background="@color/light_gray"
            android:lineSpacingExtra="2dp"
            android:paddingBottom="@dimen/five_dp"
            android:paddingLeft="@dimen/sixteen_dp"
            android:paddingRight="@dimen/sixteen_dp"
            android:paddingTop="@dimen/five_dp"
            android:text="@string/bbm_money_instruction_step3"
            android:textColor="@color/black"
            android:textSize="@dimen/secondary_text_size"
            app:font="@string/font_open_sans_regular"
            />

        <id.co.veritrans.sdk.widgets.TextViewFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eight_dp"
            android:lineSpacingExtra="2dp"
            android:paddingBottom="@dimen/five_dp"
            android:paddingLeft="@dimen/sixteen_dp"
            android:paddingRight="@dimen/sixteen_dp"
            android:paddingTop="@dimen/five_dp"
            android:text="@string/bbm_money_instruction_step4"
            android:textColor="@color/black"
            android:textSize="@dimen/secondary_text_size"
            app:font="@string/font_open_sans_regular"
            />

        <id.co.veritrans.sdk.widgets.TextViewFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eight_dp"
            android:background="@color/light_gray"
            android:lineSpacingExtra="2dp"
            android:paddingBottom="@dimen/five_dp"
            android:paddingLeft="@dimen/sixteen_dp"
            android:paddingRight="@dimen/sixteen_dp"
            android:paddingTop="@dimen/five_dp"
            android:text="@string/bbm_money_instruction_step5"
            android:textColor="@color/black"
            android:textSize="@dimen/secondary_text_size"
            app:font="@string/font_open_sans_regular"
            />

        <id.co.veritrans.sdk.widgets.TextViewFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eight_dp"
            android:lineSpacingExtra="2dp"
            android:paddingBottom="@dimen/five_dp"
            android:paddingLeft="@dimen/sixteen_dp"
            android:paddingRight="@dimen/sixteen_dp"
            android:paddingTop="@dimen/five_dp"
            android:text="@string/bbm_money_instruction_step6"
            android:textColor="@color/black"
            android:textSize="@dimen/secondary_text_size"
            app:font="@string/font_open_sans_regular"
            />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>