<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/sixteen_dp">


        <id.co.veritrans.sdk.widgets.DefaultTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/sixteen_dp"
            android:text="@string/company_code"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/secondary_text_size"
            />


        <id.co.veritrans.sdk.widgets.DefaultTextView
            android:id="@+id/text_company_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:padding="@dimen/eight_dp"
            android:text="@string/text_company_code_here"
            android:textColor="@color/black"
            android:textSize="@dimen/header_text_size"
            />


        <id.co.veritrans.sdk.widgets.DefaultTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/sixteen_dp"
            android:text="@string/bill_code"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/secondary_text_size"
            />


        <id.co.veritrans.sdk.widgets.DefaultTextView
            android:id="@+id/text_bill_pay_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:padding="@dimen/eight_dp"
            android:text="@string/text_billpay_code_here"
            android:textColor="@color/black"
            android:textSize="@dimen/header_text_size"
            />


        <id.co.veritrans.sdk.widgets.DefaultTextView
            android:id="@+id/text_validaty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:background="@color/faint_yellow"
            android:gravity="left"
            android:padding="@dimen/sixteen_dp"
            android:text="@string/text_sample_valid_date"
            android:textColor="@color/black"
            android:textSize="@dimen/secondary_text_size"
            />

        <id.co.veritrans.sdk.widgets.SemiBoldTextView
            android:id="@+id/text_copy_company_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_four_dp"
            android:clickable="true"
            android:paddingTop="@dimen/eight_dp"
            android:text="@string/copy_billpay_code"
            android:textAllCaps="true"
            android:textSize="@dimen/secondary_text_size"
            android:textStyle="bold" />

        <id.co.veritrans.sdk.widgets.SemiBoldTextView
            android:id="@+id/text_copy_va"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_four_dp"
            android:clickable="true"
            android:paddingTop="@dimen/eight_dp"
            android:text="@string/copy_billpay_code"
            android:textAllCaps="true"
            android:textSize="@dimen/secondary_text_size"
            android:textStyle="bold" />

        <id.co.veritrans.sdk.widgets.SemiBoldTextView
            android:id="@+id/text_see_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_four_dp"
            android:clickable="true"
            android:paddingBottom="@dimen/eight_dp"
            android:paddingTop="@dimen/eight_dp"
            android:text="@string/see_instruction"
            android:textAllCaps="true"
            android:textSize="@dimen/secondary_text_size"
            android:textStyle="bold"
            />


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>