<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
    >


    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:title=""
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <id.co.veritrans.sdk.widgets.TextViewFont
                android:id="@+id/text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/indosat_dompetku"
                android:textColor="@android:color/white"
                android:textSize="@dimen/tool_bar_title_size"
                app:font="@string/font_open_sans_regular"
                />

        </LinearLayout>
    </android.support.v7.widget.Toolbar>


    <FrameLayout
        android:id="@+id/indosat_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_confirm_payment"
        android:layout_below="@+id/main_toolbar"
        />


    <Button
        android:id="@+id/btn_confirm_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/sixteen_dp"
        android:background="@drawable/blue_button_selector"
        android:text="@string/confirm_payment"
        android:textAllCaps="true"
        android:textColor="@color/white"/>


</RelativeLayout>